crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__directive_match_alternatives.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<div>@match n { 1 | 2 => <p>small</p> }</div>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 46,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: Tag(
                        "div",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 6,
                            },
                            end: Position {
                                line: 1,
                                column: 40,
                            },
                        },
                        value: Match {
                            scrutinee: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 14,
                                    },
                                },
                                value: Var(
                                    "n",
                                ),
                            },
                            arms: [
                                ChildMatchArm {
                                    patterns: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 17,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 18,
                                                },
                                            },
                                            value: Number(
                                                NumberLit {
                                                    value: 1.0,
                                                    text: "1",
                                                },
                                            ),
                                        },
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 21,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 22,
                                                },
                                            },
                                            value: Number(
                                                NumberLit {
                                                    value: 2.0,
                                                    text: "2",
                                                },
                                            ),
                                        },
                                    ],
                                    guard: None,
                                    body: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 26,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 38,
                                            },
                                        },
                                        value: ChildBlock {
                                            items: [
                                                Child(
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 1,
                                                                column: 26,
                                                            },
                                                            end: Position {
                                                                line: 1,
                                                                column: 38,
                                                            },
                                                        },
                                                        value: Element(
                                                            Element {
                                                                name: Located {
                                                                    region: Region {
                                                                        start: Position {
                                                                            line: 1,
                                                                            column: 27,
                                                                        },
                                                                        end: Position {
                                                                            line: 1,
                                                                            column: 28,
                                                                        },
                                                                    },
                                                                    value: Tag(
                                                                        "p",
                                                                    ),
                                                                },
                                                                attrs: [],
                                                                children: [
                                                                    Located {
                                                                        region: Region {
                                                                            start: Position {
                                                                                line: 1,
                                                                                column: 29,
                                                                            },
                                                                            end: Position {
                                                                                line: 1,
                                                                                column: 34,
                                                                            },
                                                                        },
                                                                        value: Text(
                                                                            "small",
                                                                        ),
                                                                    },
                                                                ],
                                                                self_closing: false,
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                        },
                                    },
                                },
                            ],
                        },
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
